--- a/index1.html
+++ b/index1.html
@@ -4,19 +4,21 @@
 <script src="js/index1.js"></script>
 </head>
 	<body>
-	<form name="myForm" action="/action_page.php"
-	onsubmit="return validateForm()" method="post">
-	First_name: <input type="text" name="fname" placeholder="fname">
-	Second_name: <input type="text" name="sname" placeholder="sname">
-	E-mail: <input type="text" name="email" placeholder="e-mail">
-	Contact_details: <input type="text" name="email" placeholder="contact">
-	<input type="submit" value="Submit">
+	<form id="detailfrm">
+	First_name: <input id="ex1" type="text" name="fname" placeholder="fname">
+	Second_name: <input id="ex2" type="text" name="sname" placeholder="sname">
+	E-mail: <input id="ex3" type="text" name="email" placeholder="e-mail">
+	Contact_details: <input id="ex4" type="text" name="email" placeholder="contact">
+	<!-- <input type="submit" value="Submit"> -->
 	</form>
-	<div> id First_name:<br><span id="dispname"></span></div>
-	<div>id Second_name:<br><span id="dispname"></span></div>
-	<div>id E-mail:</br><span id="dispname"></span></div>
-	<div>id Contact_details:<br><span id="dispname"></span>
+	<div id="detail" style="display:none">
+	<div> id First_name:<br><span id="dispname1"></span></div>
+	<div>id Second_name:<br><span id="dispname2"></span></div>
+	<div>id E-mail:</br><span id="dispname3"></span></div>
+	<div>id Contact_details:<br><span id="dispname4"></span>
 	</div>	
+	</div>
+	<button type="button" onclick="validateForm()">Submit</button>
 </body>
 </html>
 
